Added Exception Handling for Tour